--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HW-Wireframe</title>
 
-    <link rel="stylesheet" href="HW-Wireframe/style.css"/>
+    <link rel="stylesheet" href="Wireframe Project/style.css"/>
 
 </head>
 
