--- a/index1.html
+++ b/index1.html
@@ -7,7 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HW-Wireframe</title>
 
-    <link rel="stylesheet" href="Wireframe Project/style.css"/>
+   
+        victorien1.github.io/style.css
+      
 
 
 </head>
