--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Bootstrap-Portfolio</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
-	<link href="style.css" rel="stylesheet">
-</head>
-<body>
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<!-- Navigation bar goes here-->
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+
+    <title>!</title>
+  </head>
+  <body>
+    
+    <!-- Navigation bar goes here-->
 
 <nav class ="navbar navbar-expand-md navbar-light bg-light stiky-top"
 <div class="container-fluid">
@@ -20,6 +21,7 @@
         <span class="navbar-toggler-icon"></span>
     
     </button>
+</div>
 
 <div class="collapse navbar-collapse" id="navbarResponsive">
     <ul class="navbar-nav ml-auto">
@@ -41,7 +43,7 @@
 <!---Homepage header Image -->
 <div class="container">
  <div class="image">
-                    <img src="images/bootstrap2.png">
+                    <img src="https://github.com/Victorien1/victorien1.github.io/blob/master/responsive%20website-3374825_1920.jpg">
 </div>
 
 <!--- Jumbotron -->
@@ -122,7 +124,7 @@
             <h1 class="display-4">We Are Experts In:</h1>
         </div>
         <hr>
-    </div>
+</div>
 </div>
 
 <!--- Cards -->
@@ -130,7 +132,7 @@
     <div class="row padding">
         <div class="col-md-4">
             <div class="card">
-                <img class="card-img-top" src="images/html5-course-267x300.png">
+                <img class="card-img-top" src="https://github.com/Victorien1/victorien1.github.io/blob/master/html5-course-267x300.png">
                 <div class="card-body">
                     <h4 class="card-title">HTML5</h4>
                     <p class="card-tex">What's new features in HTML5? </p>
@@ -141,7 +143,7 @@
         </div>
         <div class="col-md-4">
                 <div class="card">
-                    <img class="card-img-top" src="images/logo css3-2582747__340.png">
+                    <img class="card-img-top" src="https://github.com/Victorien1/victorien1.github.io/blob/master/logo%20css3-2582747__340.png>
                     <div class="card-body">
                         <h4 class="card-title">CSS3</h4>
                         <p class="card-tex">What's new in CSS3? •	CSS stands for Cascading Style Sheets
@@ -154,7 +156,7 @@
 </div>
 <div class="col-md-4">
         <div class="card">
-            <img class="card-img-top" src="images/bootstrap-stack.png">
+            <img class="card-img-top" src="https://github.com/Victorien1/victorien1.github.io/blob/master/bootstrap-stack.png">
             <div class="card-body">
                 <h4 class="card-title">Bootstrap</h4>
                 <p class="card-tex">What is Bootstrap? Build responsive, mobile-first projects on the web with the world's most popular front-end component library.
@@ -223,6 +225,10 @@
 
 </footer>
 
-
-</body>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  </body>
 </html>
